# SimpleDroneSimulator

./: README.md  pyproject.toml  readme.md
configs/: high_speed_ibvs_so3_ctrl.yaml  high_speed_ibvs_so3_head_on.yaml  high_speed_ibvs_so3_s_escape.yaml  high_speed_ibvs_so3_straight_escape.yaml  ibvs_so3_ctrl.yaml  ibvs_so3_ctrl_cam_0.yaml  ibvs_so3_ctrl_cam_m15.yaml  ibvs_so3_head_on.yaml  ibvs_so3_s_escape.yaml  ibvs_so3_straight_escape.yaml  ibvs_so3_straight_escape_cam_0.yaml  ibvs_so3_straight_escape_cam_0_log.yaml  ibvs_so3_straight_escape_cam_m15.yaml  ibvs_so3_straight_escape_cam_m15_log.yaml  ibvs_so3_straight_escape_cam_m15_nobias_log.yaml  ibvs_so3_straight_escape_log.yaml
control/: high_speed_ibvs_so3_controller.py  ibvs_so3_controller.py
models/: target.py
scripts/: high_speed_ibvs_so3_ctrl_sim.py
sim/: simulator.py
